[gd_scene load_steps=2 format=3 uid="uid://c0qb6qs3taohy"]

[ext_resource type="Script" uid="uid://cukt2o2ltvq2g" path="res://scenes/networking/high_level_ui.gd" id="1_5rgjr"]

[node name="HighLevelUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5rgjr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 2
layout_mode = 0
offset_right = 107.0
offset_bottom = 69.0

[node name="ServerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "HOST"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "JOIN"

[connection signal="pressed" from="VBoxContainer/ServerButton" to="." method="_on_server_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
